--- a/PABP_Projekat2/Views/CustomerCustomerDemoes/Create.cshtml
+++ b/PABP_Projekat2/Views/CustomerCustomerDemoes/Create.cshtml
@@ -1,36 +1,49 @@
 ﻿@model PABP_Projekat2.Models.CustomerCustomerDemo
 
 @{
-    ViewData["Title"] = "Create";
+	ViewData["Title"] = "Create";
 }
 
 <h1>Create</h1>
 
 <h4>CustomerCustomerDemo</h4>
 <hr />
+
+
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <select asp-for="CustomerId" class ="form-control" asp-items="ViewBag.CustomerId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="CustomerTypeId" class="control-label"></label>
-                <select asp-for="CustomerTypeId" class ="form-control" asp-items="ViewBag.CustomerTypeId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-8">
+		<form asp-action="Create">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="CustomerId" class="control-label"></label>
+				<select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
+				<span asp-validation-for="CustomerId" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="CustomerTypeId" class="control-label"></label>
+				<select asp-for="CustomerTypeId" class="form-control" asp-items="ViewBag.CustomerTypeId"></select>
+				<span asp-validation-for="CustomerTypeId" class="text-danger"></span>
+			</div>
+			@if (ViewBag.existsCheck != null)
+			{
+				<div class="alert alert-warning alert-dismissible fade show" role="alert">
+					<strong>Error!</strong> @ViewBag.existsCheck
+					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</div>
+			}
+			<div class="form-group">
+				<input type="submit" value="Create" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+	@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
