--- a/PABP_Projekat2/Views/EmployeeTerritoryRegion/Index.cshtml
+++ b/PABP_Projekat2/Views/EmployeeTerritoryRegion/Index.cshtml
@@ -6,6 +6,25 @@
 
 <h1>EmployeeTerritoryRegion</h1>
 
+<div class="row">
+	<div class="col-md-8">
+		<form asp-action="Index">
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label class="control-label">Search Territory:</label>
+				<input type="text" name="territoryDescription" class="form-control" />
+			</div>
+			<div class="form-group">
+				<label class="control-label">Region</label>
+				<select class="form-control" name="regionId" asp-items="ViewBag.Regions"></select>
+			</div>
+			<div class="form-group">
+				<input type="submit" value="Search" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
+</div>
+
 <div class="table-responsive">
 	<table class="table table-striped">
 		<thead>
