--- a/PABP_Projekat2/Views/Products/Index.cshtml
+++ b/PABP_Projekat2/Views/Products/Index.cshtml
@@ -11,15 +11,15 @@
 </p>
 
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Index" method="get">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label class="control-label">CategoryId</label>
+                <label class="control-label">Category</label>
                 <select name="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group">
-                <label class="control-label">SupplierId</label>
+                <label class="control-label">Supplier</label>
                 <select name="SupplierId" class="form-control" asp-items="ViewBag.SupplierId"></select>
             </div>
             <div class="form-group">
