--- a/PABP_Projekat2/Views/CustomerCustomerDemoes/Details.cshtml
+++ b/PABP_Projekat2/Views/CustomerCustomerDemoes/Details.cshtml
@@ -14,17 +14,17 @@
             @Html.DisplayNameFor(model => model.Customer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Customer.CustomerId)
+            @Html.DisplayFor(model => Model.CustomerId)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CustomerType)
+            @Html.DisplayNameFor(model => Model.CustomerType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CustomerType.CustomerTypeId)
+            @Html.DisplayFor(model => Model.CustomerTypeId)
         </dd>
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { customerId = Model.CustomerId, customerTypeId = Model.CustomerTypeId }) |
     <a asp-action="Index">Back to List</a>
 </div>
