--- a/PABP_Projekat2/Views/CustomerDemographics/Delete.cshtml
+++ b/PABP_Projekat2/Views/CustomerDemographics/Delete.cshtml
@@ -19,9 +19,19 @@
         </dd>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CustomerTypeId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<form asp-action="Delete">
+		<input type="hidden" asp-for="CustomerTypeId" />
+		@*@if (ViewBag.deleteCheck != null)
+		{
+			<div class="alert alert-warning alert-dismissible fade show" role="alert">
+				<strong>Error!</strong> @ViewBag.deleteCheck
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		}*@
+		<partial name="../Shared/DeleteValidation" />
+		<input type="submit" value="Delete" class="btn btn-danger" /> |
+		<a asp-action="Index">Back to List</a>
+	</form>
 </div>
