--- a/PABP_Projekat2/Views/Products/Delete.cshtml
+++ b/PABP_Projekat2/Views/Products/Delete.cshtml
@@ -67,9 +67,10 @@
         </dd class>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ProductId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+	<form asp-action="Delete" method="post">
+		<input type="hidden" asp-for="ProductId" />
+		<partial name="../Shared/DeleteValidation" />
+		<input type="submit" value="Delete" class="btn btn-danger" /> |
+		<a asp-action="Index">Back to List</a>
+	</form>
 </div>
